--- a/accessibility_4.html
+++ b/accessibility_4.html
@@ -45,12 +45,12 @@
 
   <body>
     <header>
-      <img src="star.png" alt="A star that I use to decorate my page.">
+      <img src="image/star.png" alt="A star that I use to decorate my page.">
       <h1>Groovy images</h1>
     </header>
     <main>
-      <img src="teapot.jpg" alt="A dark tea pot sits in a well lit window.">
-      <img src="football.jpg" alt="A football is at rest in a patch of sunlit grass.">
+      <img src="image/teapot.jpg" alt="A dark tea pot sits in a well lit window.">
+      <img src="image/football.jpg" alt="A football is at rest in a patch of sunlit grass.">
     </main>
   </body>
 
